fix readability of name

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ video {
 	bottom: 3%;
 	z-index: 5;
 	color: #fff;
-	text-shadow: 1px 1px 2px #aaa, 1px -1px 2px #aaa, -1px 1px 2px #aaa, -1px -1px 2px #aaa;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, .5), 1px -1px 2px rgba(0, 0, 0, .5), -1px 1px 2px rgba(0, 0, 0, .5), -1px -1px 2px rgba(0, 0, 0, .5);
 	width: 100%;
 	text-align: center;
 	font-size: 20px;
